# rs-srvc

./: .editorconfig  .envrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE-CHECKLIST.md  default.nix  flake.nix  gendocs.jsonl  shell.nix  sr.yaml  srvc.nix
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml  release.yml  test.yml
ci/: cargo-out-dir  sha256-releases  ubuntu-install-packages
docs/: autobuild.sh  conf.py  contents.rst  html.nix  index.rst  installation.rst  overview.rst
docs/_templates/: versions.html
docs/intro/: index.rst  overview.rst
docs/ref/: environment-variables.rst  index.rst  sink-file.rst  sr.yaml.rst  sysrev.rst
nix/: sources.json
src/: api.rs  edit_config.html  edit_config.rs  event.rs  flow.rs  hash.rs  json_schema.rs  lib.rs  main.rs  pull.rs  review.rs  sr_yaml.rs
src/embedded/: add_hashes.rs  generator.rs  generator_file.rs  html.rs  http.rs  label.rs  label_web.html  label_web.rs  mod.rs  remove_reviewed.rs  run_using.rs  sink.rs  skip_reviewed.rs
src/lib/: common.rs  event.rs  flow.rs  generate.rs  json_schema.rs  lib.rs  review.rs  sqlite.rs  sr_yaml.rs
src/tests/: mod.rs
test-projects/review-simple/: expected-output.jsonl  sr.yaml
test-resources/base-config/: base.yaml  sr.yaml
test-resources/db-override/: sr.yaml
test-resources/duplicate-field-in-config/: expected.jsonl  sr.yaml
test-resources/flow-definition/: flow-uri.json  sr.yaml
test-resources/flow-defs/: label.yaml
test-resources/flow-reviewer-arg/: sr.yaml
test-resources/flow-reviewer-arg2/: expected.jsonl  sr.yaml
test-resources/flow-uri/: expected.jsonl  sr.yaml
test-resources/generator-blank-lines/: docs.jsonl  sr.yaml
test-resources/generator-order/: docs.jsonl  expected.jsonl  sr.yaml
test-resources/generator-order-labels/: expected.jsonl  sr.yaml
test-resources/generator-order-labels-existing/: docs.jsonl  expected.jsonl  sr.yaml
test-resources/generator-sqlite/: events.db  expected.jsonl  sr.yaml
test-resources/generator-stdin/: sr.yaml
test-resources/generator-url/: expected.jsonl  sr.yaml
test-resources/generator-url-404/: sr.yaml
test-resources/implicit-db/: docs.jsonl  expected.jsonl  sr.yaml
test-resources/json-schema/: boolean-v1.json
test-resources/label/: expected.jsonl
test-resources/label-answer-answers/: docs.jsonl  expected.jsonl  sr.yaml
test-resources/label-boolean/: expected.jsonl  sr.yaml
test-resources/label-defs/: acute_tox.yaml  eye_irrit.json  substance.yaml
test-resources/label-json-schema/: expected.jsonl  sr.yaml
test-resources/label-json-schema-url/: expected.jsonl  sr.yaml
test-resources/label-label-answers/: docs.jsonl  expected.jsonl  sr.yaml
test-resources/label-uri/: expected.jsonl  sr.yaml
test-resources/pull-stdin/: sr.yaml
test-resources/pull-stdout/: sr.yaml
test-resources/review-html/: label.html  sr.yaml
tests/: common.rs  flow.rs  pull.rs  review.rs  version.rs
(+45 files in other folders)
