[package]
name = "sr"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4"
clap = { version = "3.0", features = ["derive"] }
error-chain = "0.12"
multihash = "0.16"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "gzip", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_ipld_dagcbor = "0.2"
serde_json = "1.0"
serde_yaml = "0.8"
serde_with = "1.0"
shell-words = "1.0"
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
windows-win = "2.0"
